--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,6 +11,7 @@
     "oidc-client": "^1.10.1",
     "react": "^17.0.01",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "rimraf": "^3.0.2",
